<resources>
    <string name="app_name">EDIINT AS2 (RFC 4130)</string>
    <string name="alamatServer">Alamat Mitra Dagang</string>
    <string name="contentEncryptionPrompt">Content Encryption Algorithm</string>
    <string name="keyEncryptionPrompt">Key Encryption Algorithm</string>
    <string name="signingPrompt">Signature Algorithm</string>
    <string name="contentTypePrompt">Content-Type:</string>
    <string name="pesanImportir">UNB+UNOA:2+TST021040169+CUS021030019+081029:1136+0000000001+IMPORPIB+DOKPIB\'UNH+1:CUSDEC:D:98B:UN+00000000556520081029000296\'BGM+913:::PIB++9\'LOC+9+SGSIN\'LOC+11+IDCGK\'LOC+14+CIMP\'LOC+41+050100\'DTM+132:2008:1030:102\'DTM+160:2008:1030:102\'GIS+97:::1\'GIS+98:::1\'GIS+99:::1\'MEA+WT+AAD+KGM:0000000000010\'MEA+WT+AAC+KGM:0000000000010\'RFF+ACH\'PAC+00000010++PL\'PCI++--\'TDT+20+231+4+++++:::KOREAAIRLINES:KR\'DOC+217+PL123\'DTM+182+20081010:102\'DOC+380+INV123\'DTM+182+20081010:102\'DOC+740+AWB123\'DTM+182+20081010:102\'NAD+IM+5012345678901234+PT PASTILANCAR ABADI::JL. RAYA PERJUANGAN NO.88 KEBON JER:UK JAKARTA 11530\'RFF+IP\'NAD+SU++AGRU KUNSTSTOFFECHNIK GMB:H:A-4540 BAD HALL AUSTRIA++++++AT\'NAD+BM+O\'NAD+AM++MAZIRWAN::JAKARTA\'MOA+43:00000000000020\'MOA+172:00000000010000:USD\'UNS+D\'CST+00001+8523401400\'FTX+AAA+++CAKRAM DIGITAL SERBAUNA BISA REKAM(DIGITAL VERSATILE DISC RECORDABLE/D:VD-R); SONY -- LOC+27+SG\'MEA+DX++KGM:00000000000002\'MEA+AAI++KGM:00000000000002\'PAC+00000010++CT\'</string>
</resources>