<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/koordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/item_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/content_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/alamatMitraDagang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/alamatServer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/storePasswordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Passphrase"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="test" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/storeFileField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="Sertifikat Importir (*.pfx/*.p12)"
                            android:inputType="textUri"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/storeFileButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:text="Open" />

                </LinearLayout>
                <!--true maka RSA-->
                <!--false maka EC-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/algoritmaPubKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="Algoritma Public Key"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fromField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="From"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="muhammad.dawud91@gmail.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/as2FromField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="AS2-From"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="mycompanyAS2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/as2ToField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="AS2-To"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="mendelsontestAS2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/subjectField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Subject"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="http://s.id/aKo" />
                </com.google.android.material.textfield.TextInputLayout>

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/rsaContentEncryptionAlgorithmIdentifierField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/contentEncryptionPrompt"
                    android:visibility="gone" />

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/ecContentEncryptionAlgorithmIdentifierField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/contentEncryptionPrompt"
                    android:visibility="gone" />

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/rsaKeyEncryptionAlgorithmIdentifierField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/keyEncryptionPrompt"
                    android:visibility="gone" />

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/ecKeyEncryptionAlgorithmIdentifierField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/keyEncryptionPrompt"
                    android:visibility="gone" />

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/rsaSignatureAlgorithmIdentifierField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/signingPrompt"
                    android:visibility="gone" />

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/ecSignatureAlgorithmIdentifierField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/signingPrompt"
                    android:visibility="gone" />

                <id.co.blogspot.interoperabilitas.ediint.utility.NoDefaultSpinner
                    android:id="@+id/contentTypePesanImportirField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/contentTypePrompt" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/pesanImportir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Pesan Importir"
                        android:inputType="textMultiLine"
                        android:text="@string/pesanImportir" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.startapp.android.publish.ads.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>